[package]
name = "surf-governor"
version = "0.1.2"
description = "A rate-limiting middleware for surf"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/surf-governor.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rate", "limit", "middleware", "surf"]
categories = [
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
governor = "0.5.0"
http-types = "2.12.0"
lazy_static = "1.4.0"
surf = "2.3.2"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
url = "2.3.1"
wiremock = "0.5.15"
